before deleting old authorization classes Merge remote-tracking branch 'origin/master'